# CodeAgent

./: .env.example  .gitignore  README.md  pyproject.toml
codeagent/: __init__.py  config.py  main.py
codeagent/graph/: builder.py  state.py
codeagent/graph/nodes/: code_agent.py  context_loader.py  context_qa.py  intent_router.py  memory_writer.py  reflection.py  task_decomposer.py
codeagent/memory/: compressor.py  long_term.py  short_term.py  vector_store.py
codeagent/tools/: __init__.py  code_tools.py  edit_tools.py  file_tools.py  mcp_tools.py  search_tools.py  shell_tools.py  task_tools.py
codeagent/ui/: renderer.py
tests/: conftest.py  test_edit_tools.py  test_graph.py  test_memory.py  test_router.py  test_search_tools.py  test_task_tools.py  test_tools.py
